# ss-tasks

./: .gitignore  CMakeLists.txt  main.cpp
Task1/: Task1.cpp  Task1.h
Task2/: Task2.cpp  Task2.h
Task3/: Task3.cpp  Task3.h
tests/: CMakeLists.txt  test.cpp
